--- a/public/manifest.json
+++ b/public/manifest.json
@@ -50,9 +50,9 @@
             "label": "Kubic Game 1"
         }
     ],
-    "orientation": "any",
+    "orientation": "landscape",
     "start_url": ".",
-    "display": "standalone",
+    "display": "fullscreen",
     "theme_color": "#000000",
     "background_color": "#000000"
 }
