--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
         "autoprefixer": "^10.4.2",
         "chroma-js": "^2.3.0",
         "classnames": "^2.3.1",
+        "fontfaceobserver": "^2.1.0",
         "local-storage": "^2.0.0",
         "lodash": "^4.17.21",
+        "pixi-multistyle-text": "^0.10.0",
         "pixi.js": "^6.2.2",
         "react": "^17.0.2",
         "react-device-detect": "^2.1.2",
