--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "fontfaceobserver": "^2.1.0",
         "local-storage": "^2.0.0",
         "lodash": "^4.17.21",
-        "pixi-multistyle-text": "^0.10.0",
+        "pixi-tagged-text": "^2.5.0",
         "pixi.js": "^6.2.2",
         "react": "^17.0.2",
         "react-device-detect": "^2.1.2",
