--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "@pixi/events": "^6.2.2",
         "@use-gesture/react": "^10.2.4",
+        "amazejs": "^1.0.5",
         "autoprefixer": "^10.4.2",
         "chroma-js": "^2.3.0",
         "classnames": "^2.3.1",
